fixed the wrap on the name in nav

--- a/style.css
+++ b/style.css
@@ -185,3 +185,6 @@ footer {
 button:hover {
     cursor: pointer; /* changes the cursor when hovering over the button*/
 }
+h2 {
+    white-space: nowrap;
+}
